--- a/packages/fhevm-sdk/package.json
+++ b/packages/fhevm-sdk/package.json
@@ -1,59 +1,71 @@
 {
-  "name": "@fhevm-sdk",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
+  "name": "@fhevm/universal-sdk",
+  "version": "1.0.0",
+  "description": "Framework-agnostic SDK for FHEVM confidential smart contracts",
   "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "src/index.ts",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "default": "./dist/index.js"
-    },
-    "./core": {
-      "types": "./src/core/index.ts",
-      "default": "./dist/core/index.js"
-    },
-    "./storage": {
-      "types": "./src/storage/index.ts",
-      "default": "./dist/storage/index.js"
-    },
-    "./types": {
-      "types": "./src/fhevmTypes.ts",
-      "default": "./dist/fhevmTypes.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./react": {
-      "types": "./src/react/index.ts",
-      "default": "./dist/react/index.js"
+      "import": "./dist/react/index.mjs",
+      "require": "./dist/react/index.js",
+      "types": "./dist/react/index.d.ts"
+    },
+    "./vue": {
+      "import": "./dist/vue/index.mjs",
+      "require": "./dist/vue/index.js",
+      "types": "./dist/vue/index.d.ts"
     }
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json --watch",
-    "clean": "rm -rf dist",
-    "test": "vitest run --coverage",
-    "test:watch": "vitest"
+    "build": "tsup src/index.ts src/react/index.ts src/vue/index.ts --format cjs,esm --dts",
+    "dev": "tsup src/index.ts src/react/index.ts src/vue/index.ts --format cjs,esm --dts --watch",
+    "test": "vitest",
+    "lint": "eslint src --ext .ts,.tsx",
+    "typecheck": "tsc --noEmit"
+  },
+  "keywords": [
+    "fhevm",
+    "fhe",
+    "encryption",
+    "privacy",
+    "blockchain",
+    "ethereum",
+    "zama",
+    "sdk",
+    "react",
+    "vue",
+    "framework-agnostic"
+  ],
+  "author": "FHEVM Community",
+  "license": "MIT",
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "ethers": "^6.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    }
   },
   "dependencies": {
-    "idb": "^8.0.3"
-  },
-  "peerDependencies": {
-    "@fhevm/mock-utils": "^0.1.0",
-    "@zama-fhe/relayer-sdk": "^0.2.0",
-    "ethers": "^6.13.4",
-    "react": "^18.0.0 || ^19.0.0"
+    "fhevmjs": "^0.5.0"
   },
   "devDependencies": {
-    "@types/node": "~18.19.50",
-    "@types/react": "~19.0.7",
-    "@vitest/coverage-v8": "2.1.9",
-    "@zama-fhe/relayer-sdk": "0.2.0",
-    "ethers": "^6.13.7",
-    "fake-indexeddb": "~6.0.0",
-    "jsdom": "^27.0.0",
-    "react": "~19.0.0",
-    "typescript": "~5.8.2",
-    "vitest": "~2.1.8"
+    "@types/react": "^18.2.45",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4",
+    "ethers": "^6.10.0",
+    "react": "^18.2.0"
   }
 }
