docs: update documentation

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
-  "name": "anonymous-property-voting",
   "version": 2,
-  "public": true,
-  "cleanUrls": true,
-  "trailingSlash": false
+  "name": "anonymous-property-voting",
+  "builds": [
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
 }
