--- a/examples/property-voting/package.json
+++ b/examples/property-voting/package.json
@@ -3,21 +3,27 @@
   "version": "1.0.0",
   "description": "Anonymous Property Voting dApp - FHEVM SDK Example",
   "scripts": {
-    "dev": "http-server public -p 3001 -c-1 --cors -o",
-    "build": "echo 'Static HTML - no build needed'",
-    "start": "http-server public -p 3001 -c-1 --cors"
+    "dev": "parcel public/index.html --port 3001",
+    "build": "parcel build public/index.html --dist-dir dist",
+    "start": "parcel public/index.html --port 3001"
   },
   "dependencies": {
     "@fhevm/universal-sdk": "file:../../packages/fhevm-sdk",
-    "ethers": "^6.10.0"
+    "ethers": "^6.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "parcel": "^2.11.0",
+    "typescript": "^5.3.3"
   },
   "keywords": [
     "fhevm",
     "voting",
     "privacy",
-    "property-management"
+    "property-management",
+    "react"
   ]
 }
