feat: add new features in packages (10 files)

--- a/packages/fhevm-sdk/tsconfig.json
+++ b/packages/fhevm-sdk/tsconfig.json
@@ -15,7 +15,8 @@
     "jsx": "react",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": []
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
