--- a/packages/fhevm-sdk/package.json
+++ b/packages/fhevm-sdk/package.json
@@ -49,8 +49,8 @@
   "author": "FHEVM Community",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "ethers": "^6.0.0"
+    "ethers": "^6.0.0",
+    "react": ">=18.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -61,11 +61,12 @@
     "fhevmjs": "^0.5.0"
   },
   "devDependencies": {
+    "@types/minimatch": "^6.0.0",
     "@types/react": "^18.2.45",
+    "ethers": "^6.10.0",
+    "react": "^18.2.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.4",
-    "ethers": "^6.10.0",
-    "react": "^18.2.0"
+    "vitest": "^1.0.4"
   }
 }
